--- a/blog/templates/blog/instruction.html
+++ b/blog/templates/blog/instruction.html
@@ -1,6 +1,7 @@
 {% extends 'blog/base.html' %}
 {% load staticfiles %}
 {% block content %}
+    <script src="{% static 'javascript/instruction.js' %}"></script>
     <div  class="container">
         <div class="row">
             <div class="mx-auto"><img class="introImg" src="{% static 'images/instructionsSymbol.png' %}" alt="An account symbol" width ="150px"></div>
