--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html' %}
+{% load staticfiles %}
 {% block content %}
+    <script src="{% static 'javascript/draw.js' %}"></script>
     <div class="container">
         <div class="row">
             <ul id="buttonMenu">
